--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;600;700&display=swap');
-@import 'bootstrap-icons/font/bootstrap-icons.css';
-
-/* Tailwind directives must come after all imports */
+@import '/bootstrap-icons-local.css';
 @import 'bootstrap/dist/css/bootstrap.min.css';
 
 @tailwind base;
