--- a/src/App.css
+++ b/src/App.css
@@ -630,6 +630,104 @@ body.sidebar-open {
 
 
 
+/* product images */
+
+.product-images {
+  display: flex;
+  flex-direction: column; 
+  gap: 1rem;
+  align-items: center;
+}
+
+@media (min-width: 1200px) {
+  .product-images {
+    flex-direction: row;
+    align-items: center; 
+  }
+}
+
+.product-thumbnails {
+  display: flex;
+  flex-direction: row;
+  gap: 0.5rem;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+/* On wide screens */
+@media (min-width: 1200px) {
+  .product-thumbnails {
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
+.product-thumbnail {
+  width: 120px; 
+  height: 120px;
+  object-fit: cover;
+  border-radius: 0.5rem;
+  cursor: pointer;
+  border: 2px solid #ccc;
+  transition: border 0.2s ease;
+}
+
+.product-thumbnail:hover {
+  transform: scale(1.05);
+}
+
+.product-thumbnail.active {
+  border: 2px solid #c2a290;
+}
+
+.main-image {
+  text-align: center;
+  flex-grow: 1;
+}
+
+.main-image img {
+  width: 100%;
+  max-height: 450px;
+  object-fit: contain;
+  background: #F3F1ED;
+  padding: 1.5rem;
+  border-radius: 1rem;
+}
+
+.product-thumbnails {
+  order: 2;
+}
+
+.main-image {
+  order: 1;
+}
+
+@media (min-width: 1200px) {
+  .product-thumbnails {
+    order: 1;
+  }
+
+  .main-image {
+    order: 2;
+  }
+}
+
+@media (min-width: 1200px) {
+  .product-thumbnail {
+    width: 120px;
+    height: 120px;
+  }
+}
+
+
+
+
+
+
+
+
+
 /* --------------------------------------
   QUANTITY & ICONS
 ----------------------------------------- */
@@ -847,9 +945,16 @@ body.sidebar-open {
   border: 2px solid #ccc;
   border-radius: 0.5rem;
   padding: 4px;
-  max-width: 80px;
+  max-width: 100px; 
   cursor: pointer;
   transition: border-color 0.2s ease, box-shadow 0.2s ease;
+}
+
+.variant-thumb img {
+  aspect-ratio: 1 / 1; 
+  object-fit: cover;
+  width: 100%;
+  border-radius: 0.4rem;
 }
 
 .variant-thumb small {
