--- a/src/App.css
+++ b/src/App.css
@@ -199,6 +199,14 @@ header {
   transition: color 0.2s ease;
 }
 
+.icon-static-profile {
+  font-size: 1.5rem;
+  padding: 0.10rem;
+  vertical-align: middle;
+  color: #8B6F52;
+  cursor: pointer;
+}
+
 .mobile-icons-container i {
   font-size: 1.6rem;
   color: #8B6F52;
@@ -1089,6 +1097,19 @@ body.sidebar-open {
   cursor: pointer;
 }
 
+/* .avatar-circle {
+  width: 38px;
+  height: 38px;
+  background-color: #dec6b3;
+  color: #fff;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: bold;
+  font-size: 1rem;
+  border: 2px solid #8B6F52;
+} */
 
 
 
