--- a/src/App.css
+++ b/src/App.css
@@ -983,6 +983,15 @@ body.sidebar-open {
 
 
 /* --------------------------------------
+  PRODUCT CARD / GRID
+----------------------------------------- */
+
+.image-container:hover img {
+  transform: scale(1.05);
+}
+
+
+/* --------------------------------------
   PRODUCT PAGE
 ----------------------------------------- */
 .variant-thumb {
